<resources>
    <string name="app_name">ImmersiveEducationFinal</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logologin">logo</string>
    <string name="login">login</string>
    <string name="not_registered_sign_up_here">Not Registered? Sign Up Here!</string>
    <string name="password_login">Password</string>
    <string name="email_login">Email</string>
    <string name="email_signup">Email</string>
    <string name="password_signup">Password</string>
    <string name="already_have_an_account_sign_in_here">Already Have An Account? Click Here!</string>
    <string name="sign_up">Signup</string>
    <string name="logosignup">logo</string>
    <string name="loading">Loading . . .</string>
    <string name="splashImage">splash</string>
    <string name="answer_a">Answer A</string>
    <string name="answer_b">Answer B</string>
    <string name="answer_c">Answer C</string>
    <string name="answer_d">Answer D</string>
    <string name="music">Music</string>
</resources>